--- a/proyecto/src/index.css
+++ b/proyecto/src/index.css
@@ -1,2 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300&family=IBM+Plex+Sans+Condensed&family=Sofia+Sans+Extra+Condensed:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300&family=IBM+Plex+Sans+Condensed&family=Sofia+Sans+Extra+Condensed:wght@100;300&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: white;
+    color: black;
+}
+
 
 
